third-party/rust/crates/better_default/1.0.5/tests/compile_fail/enum/top_attribute_conflict.stderr
error: a default value for this field already exists in the top default attribute.
 --> tests/compile_fail/enum/top_attribute_conflict.rs:9:11
  |
9 |         #[default(10)]
  |           ^^^^^^^

error: a default value for this field already exists in the top default attribute.
  --> tests/compile_fail/enum/top_attribute_conflict.rs:23:11
   |
23 |         #[default(5)]
   |           ^^^^^^^
